Change auth to M2M with client id and secret

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-AIRTHINGS_USERNAME=""
-AIRTHINGS_PASSWORD=""
+CLIENT_ID=""
+CLIENT_SECRET=""
 LOCATION_ID=""
 SENDER=""
 RECIPIENT="test@test.com,test2@test2.com"
